--- a/themes/slate/scss/_variables.scss
+++ b/themes/slate/scss/_variables.scss
@@ -48,7 +48,7 @@ $body-color:                #aaa !default;
 
 // Links
 
-$link-color:                $white !default;
+$link-color:                $white;
 
 // Fonts
 
